@@ -301,6 +301,7 @@ Added file encoding option to CPD GUI, which already existed for the command lin
 AssignmentInOperand enhanced to catch assignment in 'for' condition, as well as use of increment/decrement operators.  Customization properties added to allow assignment in if/while/for, or use of increment/decrement.
 Fix false positive on CastExpressions for UselessParentheses
 Fix false positive where StringBuffer.setLength(0) was using default constructor size of 16, instead of actual constructor size. 
+Fix false negative for non-primitive types for VariableNamingConventions, also expanded scope to local and method/constructors, and enhanced customization options to choose between members/locals/parameters (all checked by default)
 Creating an Empty Code Ruleset and moved the following rules from Basic ruleset:
         * Empty Code Rules
         * EmptyCatchBlock
